@startuml

hide circle
skinparam linetype ortho

entity Benchmark {
  *backup_pair_id: number
  --
  received_data_size: number
}

entity BackupPair {
  *id: number <<generated>>
  --
  experiment_id: number <<FK>>
  data_size: number
}

entity Experiment {
  *id: number <<generated>>
  --
  network_id: number <<FK>>
}

entity Network {
  *id: number <<generated>>
  --
  name: string
}

Benchmark |o--|| BackupPair
BackupPair }|--|| Experiment
Experiment }o--|| Network

@enduml
